implement output code

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/WilsonLe/img2pdf/issues"
   },
-  "homepage": "https://github.com/WilsonLe/img2pdf#readme"
+  "homepage": "https://github.com/WilsonLe/img2pdf#readme",
+  "dependencies": {
+    "pdfkit": "^0.12.1"
+  }
 }
